[package]
name = "cargo-group-imports"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Group imports in Rust workspaces "
repository = "https://github.com/cpg314/cargo-group-imports"
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-group-imports"
path = "src/main.rs"
doctest = true

[dependencies]
anyhow = "1.0.75"
camino = "1.1.6"
cargo_metadata = "0.18.0"
clap = { version = "4.4.3", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.20"
prettydiff = "0.6.4"
rayon = "1.7.0"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
walkdir = "2.4.0"

[build-dependencies]
cc = "1.0.83"

[dev-dependencies]
tempfile = "3.8.0"
